--- a/source/assets/stylesheets/base/_base.scss
+++ b/source/assets/stylesheets/base/_base.scss
@@ -6,10 +6,24 @@
 @import "variables";
 
 // Neat Settings -- uncomment if using Neat -- must be imported before Neat
-// @import "grid-settings";
+@import "grid-settings";
+////Mixins
+//@import "mixins/rwdtypo";
+@import "mixins/mixins";
 
 @import "buttons";
 @import "forms";
 @import "lists";
 @import "tables";
 @import "typography";
+@import "modules/header";
+@import "modules/hero";
+@import "modules/features";
+@import "modules/gallery";
+@import "modules/navigation";
+@import "modules/testimonials";
+@import "modules/footer";
+
+
+
+
