--- a/source/assets/stylesheets/base/_grid-settings.scss
+++ b/source/assets/stylesheets/base/_grid-settings.scss
@@ -1,14 +1,21 @@
-@import "neat-helpers"; // or "../neat/neat-helpers" when not in Rails
+$visual-grid: true;
+@import  "../../../../node_modules/node-neat/assets/stylesheets/neat-helpers" ;
 
-// Neat Overrides
-// $column: 90px;
-// $gutter: 30px;
-// $grid-columns: 12;
-// $max-width: em(1088);
+
+ $column: 90px;
+ $gutter: 30px;
+ $grid-columns: 12;
+ $max-width: em(1100);
 
 // Neat Breakpoints
-$medium-screen: em(640);
-$large-screen: em(860);
+//$medium-screen: em(640);
+//$large-screen: em(860);
+$small: em(457);
+$mobile: em(480);
+$tablet: em(860);
+$desktop:em(861);
 
-$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
-$large-screen-up: new-breakpoint(min-width $large-screen 8);
+//$medium-screen-up: new-breakpoint(min-width $medium-screen 4);
+$small-screen-down: new-breakpoint(max-width $small);
+$tablet: new-breakpoint(min-width $mobile max-width $tablet);
+$desktop-up: new-breakpoint(min-width $desktop);
