--- a/source/views/index.haml
+++ b/source/views/index.haml
@@ -5,14 +5,229 @@
     %meta{content: "IE=edge,chrome=1", http: {equiv: "X-UA-Compatible"}}
     %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
 
-    %title Page Title
+    %title Shelving Systems - Shelving Experts
     %link{href: "assets/stylesheets/application.css", rel: "stylesheet", type: "text/css"}
 
   %body
-    .delete-me
-      .container
-        %h1 Shelving
+    .row-wraper
+      .outer-container
+        %header
+          .logo
+            %img{:src => "../assets/images/shelving logo.svg", :alt => ""}/
+          %nav.greedy-nav
+            %button
+              .hamburger
+            %ul.visible-links
+              %li
+                %a{:href => "/"}Home
+              %li
+                %a{:href => "/"}About us
+              %li
+                %a{:href => "/"}One solution
+                %ul
+                  %li
+                    %a{:href => "/"}Discovery
+                  %li
+                    %a{:href => "/"}Design
+                  %li
+                    %a{:href => "/"}Project Management
+                  %li
+                    %a{:href => "/"}Manufacture
+                  %li
+                    %a{:href => "/"}Warehousing & Logistics
+                  %li
+                    %a{:href => "/"}Installation  
+                  %li
+                    %a{:href => "/"}Review  
+ 
+
+              %li
+                %a{:href => "/"}Gallery
+              %li
+                %a{:href => "/"}Contact us
+            %ul.hidden-links    
+               
+    .row-wraper
+      %section#hero
+        %h1
+          One Solution for all your shelving needs right now.
         %p
-        %strong dddd
+          A complete store solutions delivered to site (one box) including shelving, trollies, joinery and store fixtures
+        %button
+          Learn some more    
+    .row-wrapper
+      .outer-container
+        %section
+          %article.teaser
+            %h1
+              We are the new name in the shelving industry and have quickly gained a reputation for setting new standards in quality, price and exceptional service.
+
+    
+    .row-wrapper
+      %section#features
+        %article.features
+          %img{:src => "https://placehold.it/200x150", :alt => ""}/
+          %h3
+            discover & specify
+          %p
+            We have the best people in the industry, who have extensive product knowledge that work to provide the most cost effective option  
+          %button Read story
+        %article.features
+          %img{:src => "https://placehold.it/200x150", :alt => ""}/
+          %h3
+            discover & specify
+          %p
+            We have the best people in the industry, who have extensive product knowledge that work to provide the most cost effective option  
+          %button Read story  
+        %article.features
+          %img{:src => "https://placehold.it/200x150", :alt => ""}/
+          %h3
+            discover & specify
+          %p
+            We have the best people in the industry, who have extensive product knowledge that work to provide the most cost effective option  
+          %button Read story
+        %article.features
+          %img{:src => "https://placehold.it/200x150", :alt => ""}/
+          %h3
+            discover & specify
+          %p
+            We have the best people in the industry, who have extensive product knowledge that work to provide the most cost effective option  
+          %button Read story      
+    .row-wrapper
+      .outer-container
+        %section.teaser-2
+          %h1
+            Discover the difference
+          %p
+            A powerful culture of innovation, collaboration and team work    
+    
+    .row-wrapper
+      %section#gallery
+        .gal-narrow
+          %img{:src => "https://placehold.it/250x300", :alt => ""}/
+          %img{:src => "https://placehold.it/250x300", :alt => ""}/
+        .gal-wide
+          %img{:src => "https://placehold.it/800x900", :alt => ""}/
+        .gal-narrow-second
+          %img{:src => "https://placehold.it/250x300", :alt => ""}/ 
+          %img{:src => "https://placehold.it/250x300", :alt => ""}/   
+        %h3
+          Checkout our gallery for more fitouts and product information.  
+    .row-wrapper
+      .outer-container
+        %section#testimonials
+          %article.testimonials
+            %img{:src => "https://placehold.it/100x100", :alt => ""}/
+            %h3
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. lities :)" 
+            %p
+              Happy Mcgee
+            %p
+              Co-Founder, Lucky7    
+          %article.testimonials
+            %img{:src => "https://placehold.it/100x100", :alt => ""}/
+            %h3
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. lities :)" 
+            %p
+              Happy Mcgee
+            %p
+              Co-Founder, Lucky7 
+              
+    .row-wrapper
+      .outer-container
+        %section#why
+          %article.why
+            %h1
+              Why you should choose Shelving Systems
+            %p
+              Everything we learn from each project is used to improve and add value to future projects. The post-implementation, includes consultation and review of the complete process
+            %ul
+              %li
+                %h3
+                  Lorem ipsum dolor sit amet.
+                %p
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.     
+              %li
+                %h3
+                  Lorem ipsum dolor sit amet.
+                %p
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.
+              %li
+                %h3
+                  Lorem ipsum dolor sit amet.
+                %p
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.
+            %ul
+              %li
+                %h3
+                  Lorem ipsum dolor sit amet.
+                %p
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.     
+              %li
+                %h3
+                  Lorem ipsum dolor sit amet.
+                %p
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.
+              %li
+                %h3
+                  Lorem ipsum dolor sit amet.
+                %p
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.                 
+    .row-wrapper
+      .outer-container
+        %footer
+          .footer-links
+            %ul
+              %h3
+                PRODUCT
+              %li
+                %a{:href => "#"}Tour
+              %li
+                %a{:href => "#"}Features
+              %li
+                %a{:href => "#"}Pricing
+              %li
+                %a{:href => "#"}Terms      
+          .footer-links
+            %ul
+              %h3
+                CUSTOMERS
+              %li
+                %a{:href => "#"}Tour
+              %li
+                %a{:href => "#"}Features
+              %li
+                %a{:href => "#"}Pricing
+              %li
+                %a{:href => "#"}Terms
+          .footer-links
+            %ul
+              %h3
+                ABOUT US
+              %li
+                %a{:href => "#"}Tour
+              %li
+                %a{:href => "#"}Features
+              %li
+                %a{:href => "#"}Pricing
+              %li
+                %a{:href => "#"}Terms
+          .footer-links
+            %ul
+              %h3
+                FOLLOW  US
+              %li
+                %a{:href => "#"}Tour
+              %li
+                %a{:href => "#"}Features
+              %li
+                %a{:href => "#"}Pricing
+              %li
+                %a{:href => "#"}Terms            
+          
+                  
+    
     %script{src: "https://code.jquery.com/jquery-2.1.1.min.js", type: "text/javascript"}
+    %script{src: "assets/javascripts/doubletaptogo.js", type: "text/javascript"}
     %script{src: "assets/javascripts/application.js", type: "text/javascript"}
+
